# bacteria

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README.md  aclocal.m4  configure.ac  generator.cc  generator.h
m4/: gr_armadillo.m4
src/: bacteria.cc  bacteria.h  colony.cc  colony.h  generator.cc  generator.h  gtk_example.cc  microscope_config.h  simple_cell.cc  simple_cell.h
